dnl Initialise autoconf

AC_INIT(app/apogee.cpp)
AM_CONFIG_HEADER(config.h)

dnl Initialise automake

AM_INIT_AUTOMAKE(apogee, 0.0.1)

AM_MAINTAINER_MODE

dnl Need libtool

AC_PROG_LIBTOOL

dnl Test for C++ compiler

AC_PROG_CXX

CFLAGS="$CFLAGS -Wall -I/usr/X11R6/include"
CXXFLAGS="$CXXFLAGS -Wall -I/usr/X11R6/include"
LIBS="-L/usr/X11R6/lib -L/usr/local/lib"

AC_LANG_CPLUSPLUS
AC_REQUIRE_CPP

dnl Test for libraries

SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION)
CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

ATLAS_VERSION=0.4.3
AM_PATH_ATLAS($ATLAS_VERSION)
CPPFLAGS="$CPPFLAGS $ATLAS_CFLAGS"
LIBS="$LIBS $ATLAS_LIBS"

AC_CHECK_LIB(SDL_image,IMG_Load)
AC_CHECK_LIB(GL,glViewport)
AC_CHECK_LIB(GLU,gluPerspective)

LIBXML_CHECK
CPPFLAGS="$CPPFLAGS $LIBXML_CFLAGS"
LIBS="$LIBS $LIBXML_LIBS"

dnl Check sigc++
SIGC_VERSION=1.0.3
PKG_CHECK_MODULES(SIGC, sigc++-1.2 >= 1.1.11,
    [
        CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
        LDFLAGS="$LDFLAGS $SIGC_LIBS"
    ],
    [
        AM_PATH_SIGC($SIGC_VERSION,[
                CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
                LDFLAGS="$LDFLAGS $SIGC_LIBS"
                ],
                AC_MSG_ERROR(Couldn't find sigc++ or insufficient version found. Please goto http://sourceforge.net/projects/libsigc/ and get at least version $SIGC_VERSION)
        )
    ])


AM_PATH_WFMATH(0.2.8, , AC_MSG_ERROR(Couldn't find wfmath) )
CPPFLAGS="$CPPFLAGS $WFMATH_CFLAGS"
LIBS="$LIBS $WFMATH_LIBS"

AM_PATH_SKSTREAM(0.2.0, , AC_MSG_ERROR(Couldn't find skstream) )
CPPFLAGS="$CPPFLAGS $SKSTREAM_CFLAGS"
LIBS="$LIBS $SKSTREAM_LIBS"
        
AM_PATH_ERIS(0.9.0, , AC_MSG_ERROR(Couldn't find eris))
CPPFLAGS="$CPPFLAGS $ERIS_CFLAGS"
LIBS="$LIBS $ERIS_LIBS"

AM_PATH_LIB3DS(1.2.0, , AC_MSG_ERROR(Couldn't find lib3ds))
CPPFLAGS="$CPPFLAGS $LIB3DS_CFLAGS"
LIBS="$LIBS $LIB3DS_LIBS"

AC_CHECK_LIB(coal,main)
AC_CHECK_LIB(coalblade,main)
AC_CHECK_LIB(coaliso,main)
AC_CHECK_LIB(cal3d,main)
AC_CHECK_LIB(Demeter,main)

dnl Generate files
AC_OUTPUT([
	Makefile
	visual/Makefile
	gui/Makefile
	app/Makefile
])
