dnl Initialise autoconf

AC_INIT(app/apogee.cpp)
AM_CONFIG_HEADER(config.h)

dnl Initialise automake

AM_INIT_AUTOMAKE(apogee, 0.0.1)

AM_MAINTAINER_MODE

dnl Need libtool

AC_PROG_LIBTOOL

dnl Test for C++ compiler

AC_PROG_CXX

CFLAGS="$CFLAGS -Wall -I/usr/X11R6/include"
CXXFLAGS="$CXXFLAGS -Wall -I/usr/X11R6/include"
LIBS="-L/usr/X11R6/lib -L/usr/local/lib"

AC_LANG_CPLUSPLUS
AC_REQUIRE_CPP

dnl Test for libraries

SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION)
CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

AC_CHECK_LIB(SDL_image,IMG_Load)
AC_CHECK_LIB(GL,glViewport)
AC_CHECK_LIB(GLU,gluPerspective)

PKG_CHECK_MODULES(SIGC, sigc++-1.2 >= 1.2 ,
    [
        CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
        LIBS="$LIBS $SIGC_LIBS"
    ],
    [
        AC_MSG_ERROR(Couldn't find libsigc++.)
    ])

PKG_CHECK_MODULES(WF, wfmath-0.2 >= 0.2.10 skstream-0.2 >= 0.2.4 \
                      atlascpp-0.4 >= 0.4.5 coal-blade-0.4 coal-iso-0.4 ,
    [
        CPPFLAGS="$CPPFLAGS $WF_CFLAGS"
        LIBS="$LIBS $WF_LIBS"
    ],
    [
        AC_MSG_ERROR(Couldn't find WF libs.)
    ])

AM_PATH_ERIS(0.9.0, , AC_MSG_ERROR(Couldn't find eris))
CPPFLAGS="$CPPFLAGS $ERIS_CFLAGS"
LIBS="$LIBS $ERIS_LIBS"

AM_PATH_LIB3DS(1.2.0, , AC_MSG_ERROR(Couldn't find lib3ds))
CPPFLAGS="$CPPFLAGS $LIB3DS_CFLAGS"
LIBS="$LIBS $LIB3DS_LIBS"

AC_CHECK_LIB(cal3d,main)
AC_CHECK_LIB(Demeter,main)

dnl Generate files
AC_OUTPUT([
	Makefile
	visual/Makefile
	gui/Makefile
	app/Makefile
])
