noinst_LIBRARIES = libgui.a

libgui_a_SOURCES = Gui.cpp Gui.h \
		   Widget.cpp Widget.h \
		   Item.cpp Item.h \
		   Compass.cpp Compass.h \
		   Alert.cpp Alert.h \
		   Button.cpp Button.h \
		   TextField.cpp TextField.h \
		   Dialogue.cpp Dialogue.h \
		   Option.cpp Option.h \
		   Pie.cpp Pie.h \
		   CharSelector.cpp CharSelector.h
