INCLUDES = -I$(top_srcdir)

noinst_LIBRARIES = libgui.a

libgui_a_SOURCES = Gui.cpp Gui.h font.h \
		   Widget.cpp Widget.h \
		   Item.cpp Item.h \
		   Compass.cpp Compass.h \
		   Alert.cpp Alert.h \
		   Button.cpp Button.h \
		   TextField.cpp TextField.h \
		   Console.cpp Console.h \
		   Dialogue.cpp Dialogue.h \
		   Option.cpp Option.h \
		   Pie.cpp Pie.h \
		   ServerSelector.cpp ServerSelector.h \
		   CharSelector.cpp CharSelector.h
