noinst_LIBRARIES = libvisual.a

INCLUDES = -I..

libvisual_a_SOURCES = \
                      HeightMap.cpp HeightMap.h \
                      Texture.cpp Texture.h \
                      Sprite.cpp Sprite.h \
                      Tile.cpp Tile.h \
                      TileMap.cpp TileMap.h \
                      EntityRenderer.cpp EntityRenderer.h \
                      Renderer.cpp Renderer.h \
                      Isometric.cpp Isometric.h \
                      DemeterScene.cpp DemeterScene.h \
                      Model.cpp Model.h
