noinst_LIBRARIES = libvisual.a

INCLUDES = -I..

libvisual_a_SOURCES = \
                      HeightMap.cpp HeightMap.h \
                      Texture.cpp Texture.h \
                      Sprite.cpp Sprite.h \
                      Tile.cpp Tile.h \
                      TileMap.cpp TileMap.h \
                      Renderer.cpp Renderer.h \
                      EntityRenderer.cpp EntityRenderer.h \
                      Cal3dRenderer.cpp Cal3dRenderer.h \
                      TerrainRenderer.cpp TerrainRenderer.h \
                      3dsRenderer.cpp 3dsRenderer.h \
                      Isometric.cpp Isometric.h \
                      DemeterScene.cpp DemeterScene.h \
                      Model.cpp Model.h
