noinst_LIBRARIES = libvisual.a

INCLUDES = -I$(top_srcdir)

libvisual_a_SOURCES = \
                      Texture.cpp Texture.h \
                      Sprite.cpp Sprite.h \
                      Renderer.cpp Renderer.h \
                      EntityRenderer.cpp EntityRenderer.h \
                      Cal3dRenderer.cpp Cal3dRenderer.h \
                      TerrainRenderer.cpp TerrainRenderer.h \
                      3dsRenderer.cpp 3dsRenderer.h \
                      Isometric.cpp Isometric.h \
                      DemeterScene.cpp DemeterScene.h \
                      Model.cpp Model.h \
                      default_texture.h GL.h
